# DLT-Message-Analyzer

./: CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DLT-Message-Analyzer.pro  LICENSE.txt  README.md  _config.yml
dltmessageanalyzerplugin/src/: CContinuousAnalyzer.cpp  CDLTFileWrapper.hpp  CDLTMessageAnalyzer.cpp  CDLTMessageAnalyzer.hpp  CDLTMsgWrapper.cpp  CDLTRegexAnalyzerWorker.hpp  CFiltersView.cpp  CFiltersView.hpp  CGroupedResultView.cpp  CGroupedResultView.hpp  CGroupedViewModel.cpp  CGroupedViewModel.hpp  CMTAnalyzer.hpp  CMakeLists.txt  CPatternsModel.hpp  CPatternsView.hpp  CSearchResultHighlightingDelegate.cpp  CSearchResultModel.cpp  CSearchResultModel.hpp  CSearchResultView.cpp  CSearchResultView.hpp  CSettingsManager.hpp  Definitions.cpp  IDLTMessageAnalyzerController.cpp  IDLTMessageAnalyzerControllerConsumer.cpp  IDLTMessageAnalyzerControllerConsumer.hpp  dltmessageanalyzerplugin.cpp  dltmessageanalyzerplugin.hpp  dltmessageanalyzerplugin.pro  form.cpp  form.h  form.ui
dltmessageanalyzerplugin/src/analyzer/: CContinuousAnalyzer.cpp  CContinuousAnalyzer.hpp  CDLTRegexAnalyzerWorker.cpp  CDLTRegexAnalyzerWorker.hpp  CMTAnalyzer.cpp  CMTAnalyzer.hpp  CMakeLists.txt  IDLTMessageAnalyzerController.cpp  IDLTMessageAnalyzerController.hpp  IDLTMessageAnalyzerControllerConsumer.cpp  IDLTMessageAnalyzerControllerConsumer.hpp
dltmessageanalyzerplugin/src/analyzer/doc/: doc.md
dltmessageanalyzerplugin/src/cmake/: CMakeHelper.cmake  ExternalAntlr4Cpp.cmake  PatchAntlr4Runtime.cmake
dltmessageanalyzerplugin/src/common/: BaseDefinitions.cpp  BaseDefinitions.hpp  CBGColorAnimation.cpp  CBGColorAnimation.hpp  CMakeLists.txt  CQtHelper.hpp  CRegexDirectoryMonitor.cpp  CTableMemoryJumper.cpp  CTableMemoryJumper.hpp  CTreeItem.cpp  CTreeItem.hpp  Definitions.cpp  Definitions.hpp  OSHelper.cpp  OSHelper.hpp  PlotDefinitions.cpp  PlotDefinitions.hpp  TOptional.hpp  cpp_extensions.hpp
dltmessageanalyzerplugin/src/common/DMA_Plantuml/: CMakeLists.txt  DMA_Plantuml.cpp  DMA_Plantuml.hpp
dltmessageanalyzerplugin/src/common/PCRE/: CMakeLists.txt  PCREHelper.cpp  PCREHelper.hpp
dltmessageanalyzerplugin/src/common/doc/: doc.md
dltmessageanalyzerplugin/src/common/variant/: variant.hpp
dltmessageanalyzerplugin/src/components/: CMakeLists.txt
dltmessageanalyzerplugin/src/components/analyzer/api/: CAnalyzerComponent.hpp  Definitions.hpp  IDLTMessageAnalyzerController.hpp  IDLTMessageAnalyzerControllerConsumer.hpp
dltmessageanalyzerplugin/src/components/analyzer/doc/: doc.md
dltmessageanalyzerplugin/src/components/analyzer/src/: CAnalyzerComponent.cpp  CContinuousAnalyzer.cpp  CContinuousAnalyzer.hpp  CDLTRegexAnalyzerWorker.cpp  CDLTRegexAnalyzerWorker.hpp  CMTAnalyzer.cpp  CMTAnalyzer.hpp  CMakeLists.txt  Definitions.cpp  DefinitionsInternal.cpp  DefinitionsInternal.hpp  IDLTMessageAnalyzerController.cpp  IDLTMessageAnalyzerControllerConsumer.cpp
dltmessageanalyzerplugin/src/components/coverageNote/: CMakeLists.txt
dltmessageanalyzerplugin/src/components/coverageNote/api/: CCoverageNoteComponent.hpp  ICoverageNoteProvider.hpp  Types.hpp
dltmessageanalyzerplugin/src/components/coverageNote/doc/: doc.md
dltmessageanalyzerplugin/src/components/coverageNote/src/: CCoverageNoteComponent.cpp  CCoverageNoteProvider.cpp  CCoverageNoteProvider.hpp  CMakeLists.txt  ICoverageNoteProvider.cpp  Types.cpp
dltmessageanalyzerplugin/src/components/filtersView/api/: CFiltersView.hpp  CFiltersViewComponent.hpp  IFiltersModel.hpp
dltmessageanalyzerplugin/src/components/filtersView/doc/: doc.md
dltmessageanalyzerplugin/src/components/filtersView/src/: CFilterItemDelegate.cpp  CFilterItemDelegate.hpp  CFiltersModel.cpp  CFiltersModel.hpp  (+4 more)
dltmessageanalyzerplugin/src/dltWrappers/: CDLTFileWrapper.cpp  CDLTFileWrapper.hpp  CDLTMsgWrapper.cpp  CMakeLists.txt
dltmessageanalyzerplugin/src/dltWrappers/doc/: doc.md
dltmessageanalyzerplugin/src/doc/: class.puml  doc.md
dltmessageanalyzerplugin/src/filtersView/: CFilterItemDelegate.cpp  CFilterItemDelegate.hpp  CFiltersModel.cpp  CFiltersModel.hpp  CFiltersView.cpp  CFiltersView.hpp  CMakeLists.txt
dltmessageanalyzerplugin/src/filtersView/doc/: class.puml  doc.md
dltmessageanalyzerplugin/src/groupedView/: CGroupedView.cpp  CGroupedView.hpp  CGroupedViewModel.cpp  CGroupedViewModel.hpp  CMakeLists.txt
dltmessageanalyzerplugin/src/groupedView/doc/: doc.md
dltmessageanalyzerplugin/src/log/: CConsoleCtrl.cpp  CConsoleCtrl.hpp  CConsoleInputProcessor.cpp  CConsoleInputProcessor.hpp  CConsoleView.cpp  CConsoleView.hpp  CLog.cpp  CLog.hpp  CMakeLists.txt
dltmessageanalyzerplugin/src/log/doc/: doc.md
dltmessageanalyzerplugin/src/logo/: CLogo.cpp  CMakeLists.txt
dltmessageanalyzerplugin/src/logo/doc/: doc.md
dltmessageanalyzerplugin/src/patternsView/: CMakeLists.txt  CPatternsModel.cpp  CPatternsModel.hpp  CPatternsView.cpp  CPatternsView.hpp
dltmessageanalyzerplugin/src/patternsView/doc/: class.puml  doc.md
dltmessageanalyzerplugin/src/plant_uml/: CImageViewer.cpp  CMakeLists.txt  CSVGView.hpp  CUMLView.cpp  CUMLView.hpp
dltmessageanalyzerplugin/src/plant_uml/doc/: class.puml  doc.md
dltmessageanalyzerplugin/src/plugin/: CMakeLists.txt
dltmessageanalyzerplugin/src/plugin/api/: CDLTMessageAnalyzer.hpp  form.h
dltmessageanalyzerplugin/src/plugin/doc/: doc.md
dltmessageanalyzerplugin/src/plugin/src/: CDLTMessageAnalyzer.cpp  CMakeLists.txt  form.cpp  form.ui  form.ui.autosave
dltmessageanalyzerplugin/src/resources/: dltmessageanalyzer.qrc
dltmessageanalyzerplugin/src/searchView/: CMakeLists.txt  CSearchResultHighlightingDelegate.cpp  CSearchResultModel.cpp  CSearchResultModel.hpp  CSearchResultView.cpp  CSearchResultView.hpp
dltmessageanalyzerplugin/src/searchView/doc/: doc.md
dltmessageanalyzerplugin/src/settings/: CMakeLists.txt  CSettingItem.cpp  CSettingItem.hpp  CSettingsManager.cpp  CSettingsManager.hpp  ISettingItem.cpp  ISettingItem.hpp  TSettingItem.hpp
dltmessageanalyzerplugin/src/settings/doc/: doc.md
dltmessageanalyzerplugin/src/uml/: CImageViewer.hpp  CSVGView.cpp  CUMLView.cpp  CUMLView.hpp
(+262 files in other folders)
